--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -1,4 +1,4 @@
-﻿@inject DragDropService DragDropService
+﻿@inject DragDropStateService DragDropStateService
 
 <div class="dropitem-box" style="@Style; float:left; opacity:@ComponentSchema.Opacity; width: @(_itemWidth)%; @(_itemHeight) min-height: @(_itemMinHeight)px;
         @ComponentSchema.ComponentPropertySchema.CustomStyle">
@@ -27,7 +27,7 @@
         {
             <div class="dropitem-title">@ComponentSchema.ComponentPropertySchema.Title ：</div>
         }
-        <div class="dropitem-div">@ComponentSchema.RenderFragment</div>
+        <div class="dropitem-div">@ComponentSchema.RenderFragment(ComponentSchema)</div>
     </div>
 </div>
 
@@ -94,14 +94,14 @@
 
     private void OnDragStart(DragEventArgs dragEventArgs)
     {
-        DragDropService.DragItem_Effect_Move(dragEventArgs);
+        DragDropStateService.DragItem_Effect_Move(dragEventArgs);
         ComponentSchema.Opacity = 0.2;
-        DragDropService.CurrentDragComponent = ComponentSchema;
+        DragDropStateService.CurrentDragComponent = ComponentSchema;
     }
 
     private void OnDragEnter()
     {
-        DragDropService.LastDragOverComponent = ComponentSchema;
+        DragDropStateService.LastDragOverComponent = ComponentSchema;
     }
 
     private void OnDragOver(DragEventArgs dragEventArgs)
@@ -122,7 +122,7 @@
     private void OnDragLeave()
     {
         //如果当前被拖拽的组件和拖拽到上面的组件是同一个，直接返回
-        if (DragDropService.CurrentDragComponent == ComponentSchema)
+        if (DragDropStateService.CurrentDragComponent == ComponentSchema)
             return;
 
         ComponentSchema.ComponentPropertySchema.Style = string.Empty;
@@ -144,7 +144,7 @@
         BlazorEventDispatcher.RegisterEvent("designengine.dropitem.onclick", (value) =>
         {
             //取消选中项
-            if (DragDropService.LastSelectedComponent != ComponentSchema)
+            if (DragDropStateService.LastSelectedComponent != ComponentSchema)
             {
                 ComponentSchema.IsSelected = false;
                 StateHasChanged();
