--- a/docs/H.LowCode.Docs.WasmHost/App.razor
+++ b/docs/H.LowCode.Docs.WasmHost/App.razor
@@ -1,4 +1,4 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@Assemblies" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -10,3 +10,12 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code
+{
+    private Assembly[] Assemblies = new Assembly[]
+    {
+        typeof(H.LowCode.Docs.Dumi.Shared.MainLayout).Assembly,
+        typeof(H.LowCode.Docs.Pages.Index).Assembly
+    };
+}
