--- a/docs/H.LowCode.Docs/Pages/Index.razor
+++ b/docs/H.LowCode.Docs/Pages/Index.razor
@@ -1,24 +1,14 @@
 ﻿@page "/"
 
-<div class="__dumi-default-layout-hero">
-    <h1>page designer</h1>
-    <div>
-        <div class="markdown"><p>页面设计器实现设计</p></div>
-    </div>
-    <a href="/specification"><button type="button">Getting Started</button></a>
-</div>
-<div class="__dumi-default-layout-features">
-    <dl style="background-image: url(&quot;https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png&quot;);"><dt>Feature 1</dt><dd>
-        <div class="markdown"><p>Balabala</p></div></dd></dl><dl style="background-image: url(&quot;https://gw.alipayobjects.com/zos/bmw-prod/d60657df-0822-4631-9d7c-e7a869c2f21c/k79dmz3q_w126_h126.png&quot;);"><dt>Feature 2</dt><dd><div class="markdown"><p>Balabala</p></div></dd></dl><dl style="background-image: url(&quot;https://gw.alipayobjects.com/zos/bmw-prod/d1ee0c6f-5aed-4a45-a507-339a4bfe076c/k7bjsocq_w144_h144.png&quot;);"><dt>Feature 3</dt><dd><div class="markdown"><p>Balabala</p></div></dd></dl></div>
+<Hero Title="page designer" Description="页面设计器实现设计" GettingStartPath="/introduce"></Hero>
+<Feature></Feature>
+
 <div class="__dumi-default-layout-content">
+    <Markdown></Markdown>
     <div class="markdown">
         <h2 id="hello-myapp">
             <a aria-hidden="true" tabindex="-1" href="/#hello-myapp"><span class="icon icon-link"></span></a>Hello myapp!
         </h2>
     </div>
-    <div class="__dumi-default-layout-footer">
-        <div class="markdown">
-            <p>Copyright © 2023</p>
-        </div>
-    </div>
+    <Footer Copyright="Copyright © 2023"></Footer>
 </div>
