H.LowCode.Docs 支持 markdown 文件渲染

--- a/docs/H.LowCode.Docs.Dumi/Components/CodeBox.razor
+++ b/docs/H.LowCode.Docs.Dumi/Components/CodeBox.razor
@@ -1,6 +1,6 @@
 ﻿<div class="__dumi-default-previewer">
     <div class="__dumi-default-previewer-demo">
-        @Code
+        @ChildContent
     </div>
     <div class="__dumi-default-previewer-desc"></div>
     <div class="__dumi-default-previewer-actions">
@@ -13,5 +13,5 @@
 
 @code {
     [Parameter]
-    public string Code{ get; set; }
+    public RenderFragment ChildContent { get; set; }
 }
