--- a/docs/H.LowCode.Docs.Dumi/Components/Content.razor
+++ b/docs/H.LowCode.Docs.Dumi/Components/Content.razor
@@ -1,6 +1,8 @@
-﻿@RenderFragment
+﻿<div class="__dumi-default-layout-content">
+    @ChildContent
+</div>
 
 @code {
     [Parameter]
-    public RenderFragment RenderFragment{ get; set; }
+    public RenderFragment ChildContent { get; set; }
 }
