--- a/docs/H.LowCode.Docs.Dumi/Components/Markdown.razor
+++ b/docs/H.LowCode.Docs.Dumi/Components/Markdown.razor
@@ -1,20 +1,34 @@
 ﻿<div class="markdown">
-    <h2 id="hello-myapp">
-        <a aria-hidden="true" tabindex="-1" href="/#hello-myapp"><span class="icon icon-link"></span></a>@MarkupString
-    </h2>
+    @if (string.IsNullOrEmpty(FileName))
+    {
+        @ChildContent
+    }
+    else
+    {
+        @(new MarkupString(html))
+    }
 </div>
 
 @code {
-    private string MarkupString { get; set; }
+    [Parameter]
+    public string FileName { get; set; }
+
+    [Parameter]
+    public Type Type{ get; set; }
+
+    [Parameter]
+    public RenderFragment ChildContent { get; set; }
+
+    private string html { get; set; }
 
     protected override void OnInitialized()
     {
-        string location = @"D:\H\code\H.LowCode\docs\H.LowCode.Docs.Dumi\Components";
-        string markdownFilePath = Path.Combine(location, typeof(Markdown).Name, ".md");
-        if (File.Exists(markdownFilePath) == false)
-            return;
-
-        string MarkupString = MarkdownToHtml.GeneratorHtml(markdownFilePath);
+        if (string.IsNullOrEmpty(FileName) == false)
+        {
+            if (Type == null)
+                throw new ArgumentNullException(nameof(Type));
+            html = MarkdownToHtml.ConvertToHtml(FileName, Type);
+        }
 
         base.OnInitialized();
     }
