--- a/docs/H.LowCode.Docs/Pages/Index.razor
+++ b/docs/H.LowCode.Docs/Pages/Index.razor
@@ -2,13 +2,11 @@
 
 <Hero Title="page designer" Description="页面设计器实现设计" GettingStartPath="/introduce"></Hero>
 <Feature></Feature>
-
-<div class="__dumi-default-layout-content">
-    <Markdown></Markdown>
-    <div class="markdown">
+<Content>
+    <Markdown>
         <h2 id="hello-myapp">
             <a aria-hidden="true" tabindex="-1" href="/#hello-myapp"><span class="icon icon-link"></span></a>Hello myapp!
         </h2>
-    </div>
-    <Footer Copyright="Copyright © 2023"></Footer>
-</div>
+    </Markdown>
+    <Copyright></Copyright>
+</Content>
