--- a/docs/H.LowCode.Docs/Pages/Samples/Sample.razor
+++ b/docs/H.LowCode.Docs/Pages/Samples/Sample.razor
@@ -4,7 +4,7 @@
 <DocList></DocList>
 <SlugList SlugItems="@slugItems"></SlugList>
 <Content>
-    <Markdown></Markdown>
+    <Markdown FileName="Sample.md" Type="typeof(DocList)"></Markdown>
     <CodeBox>
         @Code
     </CodeBox>
@@ -13,6 +13,7 @@
             文档编写示例
         </p>
     </Markdown>
+    <Markdown FileName="Sample1.Sample1.md" Type="typeof(DocList)"></Markdown>
     <DocFooter></DocFooter>
 </Content>
 
