--- a/docs/H.LowCode.Docs.Dumi/Shared/MainLayout.razor
+++ b/docs/H.LowCode.Docs.Dumi/Shared/MainLayout.razor
@@ -4,13 +4,15 @@
 
 <div class="__dumi-default-layout" data-route="/"
      data-show-sidemenu="@data_show_sidemenu" data-show-slugs="@data_show_slugs" data-site-mode="true" data-gapless="false">
-    <NavMenu />
+    <NavMenu ActivePath="@activePath" />
     @Body
 </div>
 
 @code {
     private string data_show_sidemenu = "false";
     private string data_show_slugs = "false";
+
+    private string activePath;
 
     protected override void OnInitialized()
     {
@@ -31,6 +33,9 @@
             data_show_sidemenu = "false";
             data_show_slugs = "false";
         }
+
+        activePath = "/" + NavigationManager.ToBaseRelativePath(e.Location);
+
         StateHasChanged();
     }
 
