--- a/docs/H.LowCode.Docs.Dumi/_Imports.razor
+++ b/docs/H.LowCode.Docs.Dumi/_Imports.razor
@@ -1,3 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
 @using H.LowCode.Docs.Dumi.Model
 @using H.LowCode.Docs.Dumi.Util
