--- a/docs/H.LowCode.Docs.WasmHost/App.razor
+++ b/docs/H.LowCode.Docs.WasmHost/App.razor
@@ -1,7 +1,7 @@
 ﻿<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@Assemblies" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        @*<FocusOnNavigate RouteData="@routeData" Selector="h1" />*@
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
