--- a/docs/H.LowCode.Docs.Dumi/Shared/NavMenu.razor
+++ b/docs/H.LowCode.Docs.Dumi/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="__dumi-default-navbar" data-mode="site">
     <button class="__dumi-default-navbar-toggle"></button>
-    <a class="__dumi-default-navbar-logo" href="/" style="background-image: url(&quot;favicon.png&quot;);">H.LowCode</a>
+    <a class="__dumi-default-navbar-logo" href="/" style="background-image: url(&quot;favicon.png&quot;);">Docs</a>
     <nav>
         <div class="__dumi-default-search">
             <input class="__dumi-default-search-input" type="search" value="">
