--- a/docs/H.LowCode.Docs/Pages/Index.razor
+++ b/docs/H.LowCode.Docs/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<Hero Title="page designer" Description="页面设计器实现设计" GettingStartPath="/introduce"></Hero>
+<Hero Title="Docs" Description="Blazor & Markdown 文档编写" GettingStartPath="/introduce"></Hero>
 <Feature></Feature>
 <Content>
     <Markdown>
