--- a/docs/H.LowCode.Docs/Pages/LowCode/Index.razor
+++ b/docs/H.LowCode.Docs/Pages/LowCode/Index.razor
@@ -1,5 +1,5 @@
-﻿@page "/dragdrop"
-@attribute [MenuItem(title:"拖拽", order:2)]
+﻿@page "/lowcode"
+@attribute [MenuItem(title: "LowCode", order: 3)]
 
 <DocList></DocList>
 <Content>
