--- a/docs/H.LowCode.Docs/Pages/Blazor/DocList.razor
+++ b/docs/H.LowCode.Docs/Pages/Blazor/DocList.razor
@@ -4,7 +4,8 @@
     private IList<DocItem> docItems = new List<DocItem>()
     {
         new DocItem(){ Path="/blazor", Title="Blazor 简介" },
-        new DocItem(){ Path="/blazor/i18ndev", Title="国际化实现" },
-        new DocItem(){ Path="/blazor/themedev", Title="主题实现" }
+        new DocItem(){ Path="/blazor/login", Title="登录实现" },
+        new DocItem(){ Path="/blazor/i18n", Title="国际化实现" },
+        new DocItem(){ Path="/blazor/theme", Title="主题实现" }
     };
 }
