调整目录结构

--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Admin/Shared/AdminLayout.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Admin/Shared/AdminLayout.razor
@@ -22,27 +22,9 @@
     {
         new MenuDataItem
         {
-            Path = "/admin",
+            Path = "/",
             Name = "首页",
             Key = "home"
-        },
-        new MenuDataItem
-        {
-            Path = "/admin/create",
-            Name = "新建应用",
-            Key = "new"
-        },
-        new MenuDataItem
-        {
-            Path = "/admin/myapps",
-            Name = "我的应用",
-            Key = "myapps"
-        },
-        new MenuDataItem
-        {
-            Path = "/admin/appmarket",
-            Name = "应用市场",
-            Key = "appmarket"
         }
     };
 
@@ -53,13 +35,6 @@
             Key = "Ant Design Blazor",
             Title = "Ant Design Blazor",
             Href = "https://antblazor.com",
-            BlankTarget = true,
-        },
-        new LinkItem
-        {
-            Key = "XRender",
-            Title = "XRender",
-            Href = "https://x-render.gitee.io/",
             BlankTarget = true,
         }
     };
