--- a/src/Sample/H.LowCode.Sample.Admin/Shared/MainLayout.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         @Body
     </ChildContent>
     <FooterRender>
-        <FooterView Copyright="2021 H.LowCode" Links="Links"></FooterView>
+        <FooterView Copyright="@(DateTime.Now.Year + " H.LowCode")" Links="Links"></FooterView>
     </FooterRender>
 </AntDesign.ProLayout.BasicLayout>
 <SettingDrawer />
@@ -68,16 +68,16 @@
     {
         new LinkItem
         {
-            Key = "Ant Design Blazor",
-            Title = "Ant Design Blazor",
-            Href = "https://antblazor.com",
+            Key = "H.LowCode",
+            Title = "H.LowCode",
+            Href = "/",
             BlankTarget = true,
         },
         new LinkItem
         {
-            Key = "XRender",
-            Title = "XRender",
-            Href = "https://x-render.gitee.io/",
+            Key = "Ant Design Blazor",
+            Title = "Ant Design Blazor",
+            Href = "https://antblazor.com",
             BlankTarget = true,
         }
     };
