--- a/src/Sample/H.LowCode.Sample.Admin/Shared/MainLayout.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Shared/MainLayout.razor
@@ -1,8 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<AntDesign.ProLayout.BasicLayout 
-    Logo="@("logo.png")"
-    MenuData="_menuData">
+<AntDesign.ProLayout.BasicLayout Logo="@("logo.png")" Title="H.LowCode" MenuData="_menuData">
     <RightContentRender>
         @*<AntDesign.Pro.Template.Components.RightContent />*@
         RightContent
