--- a/src/Sample/H.LowCode.Sample.Admin/Pages/Index.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Pages/Index.razor
@@ -1,9 +1,27 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello, H.LowCode!</h1>
 
-Welcome to your new app.
+<p>设计器示例：</p>
 
 <p>
-    快捷入口：<a href="/designer/appid/pageid" target="_blank">设计器</a>
+    <a href="/designer/appid/pageid" target="_blank">默认设计器</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=form" target="_blank">表单设计器</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=list" target="_blank">列表设计器-List</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=table" target="_blank">列表设计器-Table</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=card" target="_blank">列表设计器-Card</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=workbench" target="_blank">工作台设计器</a>
+</p>
+<p>
+    <a href="/designer/appid/pageid?p=portal" target="_blank">门户设计器</a>
 </p>
