升级到.NET8 Auto 模式

--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -14,6 +14,10 @@
     background-color: #ffffff;
 }
 
+    .dropitem:hover {
+        outline: #1890ff dashed 2px;
+    }
+
 .dropitem-selected {
     outline: #1890ff solid 2px;
 }
