--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
-@using H.LowCode.DesignEngine.Shared
+@using H.LowCode.DesignEngine.Layout
 @using System.Net.Http
 @using AntDesign.ProLayout
 @using AntDesign
