--- a/src/Sample/H.LowCode.Sample.Admin/_Imports.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/_Imports.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
-@using H.LowCode.Sample.Admin.Shared
+@using H.LowCode.Sample.Admin.Layout
 @using H.LowCode.RenderEngine
 @using H.LowCode.Metadata
 @using System.Net.Http
