--- a/src/Sample/H.LowCode.Sample.Host/Components/App.razor
+++ b/src/Sample/H.LowCode.Sample.Host/Components/App.razor
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>H.LowCode</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="H.LowCode.Sample.Host.styles.css" />
 
     <!-- H.LowCode.DesignEngine Assets -->
     <link href="_content/H.LowCode.DesignEngine/designengine.css" rel="stylesheet" />
@@ -15,22 +16,15 @@
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
     <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
 
-    <link href="H.LowCode.Sample.WasmHost.styles.css" rel="stylesheet" />
-
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
+
+    <HeadOutlet @rendermode="@InteractiveAuto" />
 </head>
 
 <body>
-    <div id="app" class="designpage">Loading...</div>
-
-    <!--<div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>-->
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <Routes @rendermode="@InteractiveAuto" />
+    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
