--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
@@ -2,20 +2,45 @@
 @inject IEnumerable<IComponentProvider> ComponentProviders
 @inject DragDropStateService DragDropStateService
 
-<Tabs DefaultActiveKey="1" Class="designpage" Style="width:250px; padding:0px 8px;">
-    <TabPane Key="1" Tab="组件库">
-        @foreach (var componentProvider in ComponentProviders)
-        {
-            <div style="display: inline-block; padding-bottom: 20px;">
-                <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@componentProvider.Title</div>
-                @foreach (var component in componentProvider.LoadComponent())
-                {
-                    <DragItem ComponentSchema="component"></DragItem>
-                }
-            </div>
-        }
+<Tabs TabPosition="@TabPosition.Left" DefaultActiveKey="1" Size="@TabSize.Small">
+    <TabPane Key="1">
+        <TabTemplate>
+            <span><Icon Type="appstore" /></span>
+        </TabTemplate>
+        <ChildContent>
+            <Tabs DefaultActiveKey="11" Class="designpage" Style="width:250px; padding:0px 8px;">
+                <TabPane Key="11" Tab="组件库">
+                    @foreach (var componentProvider in ComponentProviders)
+                    {
+                        <div style="display: inline-block; padding-bottom: 20px;">
+                            <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@componentProvider.Title</div>
+                            @foreach (var component in componentProvider.LoadComponent())
+                            {
+                                <DragItem ComponentSchema="component"></DragItem>
+                            }
+                        </div>
+                    }
+                </TabPane>
+                <TabPane Key="12" Tab="页面库">
+
+                </TabPane>
+            </Tabs>
+        </ChildContent>
     </TabPane>
-    <TabPane Key="2" Tab="页面库">
-        
+    <TabPane Key="2">
+        <TabTemplate>
+            <span><Icon Type="database" /></span>
+        </TabTemplate>
+        <ChildContent>
+            数据源
+        </ChildContent>
+    </TabPane>
+    <TabPane Key="3">
+        <TabTemplate>
+            <span><Icon Type="code" /></span>
+        </TabTemplate>
+        <ChildContent>
+            在线编码
+        </ChildContent>
     </TabPane>
 </Tabs>
