--- a/src/Sample/H.LowCode.Sample.Host.Client/Routes.razor
+++ b/src/Sample/H.LowCode.Sample.Host.Client/Routes.razor
@@ -17,7 +17,7 @@
 {
     private Assembly[] Assemblies = new Assembly[]
     {
-        typeof(DesignEngine.Layout.DesignerLayout).Assembly
+        typeof(DesignEngine.Layout.DesignEngineLayout).Assembly
     };
 
     private Type DefaultLayout = typeof(MainLayout);
