--- a/src/Sample/H.LowCode.Sample.Host/Components/App.razor
+++ b/src/Sample/H.LowCode.Sample.Host/Components/App.razor
@@ -14,10 +14,11 @@
     <!-- Ant Design Pro Blazor Assets -->
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
-    <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
 
-    <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="BlazorApp1.styles.css" />
+    <link rel="icon" type="image/png" href="logo.png" />
 
     <HeadOutlet @rendermode="@InteractiveAuto" />
 </head>
